[FEAT]: Add config read from AWS Parameter store, modify data swaggo for sign-up
